# election-municipale

./: README.md  user.h
chayma_final_stat/: Makefile  chayma.glade  config.status
chayma_final_stat/autom4te.cache/: requests
chayma_final_stat/src/: Makefile.in  callbacks.c  chayma  interface.c  interface.c.bak  interface.h.bak  reclamation.c  reclamation.h  reclamation.txt
chayma_final_stat_2/: Makefile.in  chayma.glade.bak  config.h
chayma_final_stat_2/autom4te.cache/: requests
chayma_final_stat_2/src/: Makefile  Makefile.am  callbacks.c  callbacks.h  chayma  interface.c  interface.c.bak  main.c  reclamation.c  reclamation.h  reclamation.txt
project1_rec/: Makefile  chayma.glade.bak  chayma.gladep.bak  config.status  project1.glade  project1.glade.bak
project1_rec/autom4te.cache/: requests
project1_rec/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c  project1  reclamation.c  reclamation.h
project_rec_chayma/: Makefile  Makefile.in  chayma.glade.bak  configure
project_rec_chayma/autom4te.cache/: requests  (+1 more)
rec_ajou_aff_supp_cher/: Makefile  Makefile.am  chayma.glade  config.status  configure.in
test/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  main.c  prog  reclamation.c  reclamation.h  reclamation.txt  stats.h  test.glade.bak  test.gladep  user.h
test reclamation/: filename.txt  main.c  prog  reclamation.c  reclamation.h
test_final/: liste.txt  main.c  makefile  prog  reclamation.c  reclamation.h  reclamation.txt  stats.h  user.txt
(+45 files in other folders)
